新增换肤功能

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="referrer" content="no-referrer" />
-    <!--<title>哔哩哔哩移动版-( ゜- ゜)つロ干杯~ - bilbili-B站官网</title>-->
-    <title>test</title>
+    <title>哔哩哔哩移动版-( ゜- ゜)つロ干杯~ - bilbili-B站官网</title>
   </head>
   <body>
     <div id="app"></div>
